# examples

./: BUILD.bazel  README.md  WORKSPACE  package.json  tsconfig.json
cli-js/: BUILD.bazel  cli_rule.bzl
cli-ts/: BUILD.bazel  cli_rule.bzl
